# risb

./: .clang-tidy  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION  CMakeLists.txt  COPYRIGHT  Dockerfile  Dockerfile.linux-amd64-dev  Jenkinsfile  LICENSE.txt  README.md  TODO.md  docker-compose-linux-amd64-dev.yml  docker-compose.yml  noxfile.py  pyproject.toml
.github/: CODEOWNERS
.github/actions/setup-triqs/: action.yml
.github/workflows/: build.yml  cd.yml  ci.yml  docs.yml  main.yml  triqs.yml
c++/risb/: CMakeLists.txt  common_functions.hpp
c++/risb/embedding_atom_diag/: embedding_atom_diag.cpp  embedding_atom_diag.hpp
c++/risb/functions/: functions.cpp  functions.hpp
doc/: ChangeLog.md  about.rst  changelog.rst  documentation.rst  index.rst  install.rst  issues.rst
doc/_templates/: sideb.html
docker/: Dockerfile  Dockerfile.dev  Dockerfile.docs  compose.yml  conda.sh  docker-compose-dev.yml  docker-compose-docs.yml  docker-compose.yml
docs/: .gitignore  Gemfile  README.md  _config.yml  about.md  conf.py  contents.md  index.md  install.md  risb.bib
docs/How-to guides/: how-to.md
docs/_includes/: mathjax.html
docs/examples/: decorated-honeycomb.md  examples.md
docs/explanations/: embedding.md  index.md  kweight.md  modular_everything.md  projectors.md
docs/how-to/: diis.md  dispersion.md  embedding.md  index.md  kweight.md  lattice_solver.md  projectors.md  quadratic_terms.md
docs/tutorials/: bilayer-hubbard.md  decorated-honeycomb.md  hubbard.md  index.md  kagome.md  self-consistent-loop.md  self-consistent.md  tutorials.md
examples/: bilayer_hubbard.py  bilayer_hybbard.py  csc_example.py  decorated_honeycomb.py  hubbard.py  kagome_hubbard.py  oneshot_oxides.py
packaging/: Dockerfile  Dockerfile.dev  TRIQS-risb-3.0.0-foss-2019a-Python-3.7.2.eb  compose-dev.yml  compose.yml
packaging/conda/: meta.yaml
python/risb/: CMakeLists.txt  __init__.py  helpers.py  helpers_gf.py  sc.py  solve_impurity.py  solve_lattice.py
python/risb/dft_tools/: __init__.py  sumk_dft_risb.py
python/risb/dftx/: __init__.py  csc_vasp.py  oneshot_risb.py  oneshot_risb_new.py  pyscf_interface.py  pyscf_local_orbitals.py  risb_solver.py  sumk_dft_risb.py
python/risb/embedding/: __init__.py  embedding_atom_diag.py
python/risb/embedding_atom_diag/: __init__.py  embedding_atom_diag_module_desc.py
python/risb/embedding_pomerol/: __init__.py  embedding_pomerol.py
python/risb/functions/: __init__.py  functions_module_desc.py  functions_module_desc.py.bak
python/risb/kweight/: __init__.py  kweight.py
python/risb/optimize/: __init__.py  common.py  diis.py  solver_newton.py
python/risb/sc_cycle/: __init__.py  sc_cycle.py  solver.py  solver_gf.py
python/risb/solver/: __init__.py
src/risb/: __init__.py  helpers.py  helpers_triqs.py  solve_lattice.py  version.py
src/risb/embedding/: __init__.py  dummy.py  embedding_atom_diag.py
src/risb/kweight/: __init__.py  from_triqs_hartree.py  kweight.py
src/risb/optimize/: __init__.py  diis.py  linear_mixing.py  solver_newton.py
src/risb/other/: from_triqs_hartree.py
test/: CMakeLists.txt
test/c++/: basic.cpp  common.hpp  one_band_cubic.cpp  one_band_cubic_gf.cpp  one_band_semicircular.cpp  one_band_semicircular_gf.cpp
test/python/: CMakeLists.txt  basic_functions.py  common.py  ed_one_band_cubic.py  ed_one_band_semicircular_gf.py  ed_six_site_dh.py  ed_three_orbital_dh.py  ghost.py  one_band_cubic.py  one_band_cubic_gf.py  one_band_cubic_pomerol.py  one_band_semicircular_gf.py  test_basic_functions.py  test_one_band_cubic.py  test_two_band_cubic_kanamori.py  three_orbital_dh.py  two_band_cubic_bilayer.py  two_band_cubic_kanamori.py  two_band_semicircular_gf.py
tests/: common.py  data_helpers.h5  test_atomdiag.py  test_helpers.py  test_latticesolver.py  test_one_band_cubic.py  test_two_band_cubic_bilayer.py  test_two_band_cubic_kanamori.py
