[project]
name = "risb"
dynamic = ["version"]
description = "Rotationally invariant slave boson mean-field theory."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["quantum", "mean field", 'correlated electrons', 'quantum embedding', 'risb', 'slave bosons']
authors = [
  {name = "H. L. Nourse"}
]
dependencies = [
  "numpy",
  "scipy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/thenoursehorse/risb"
Documentation = "https://thenoursehorse.github.io/risb"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/risb/version.py"
version.fallback-version = "0.0.0"

[project.optional-dependencies]
docs = [
  "furo",
  "myst_parser >=0.13",
  "myst-parser[linkify]",
  "sphinx >=4.0",
  "sphinx-autobuild",
  "sphinx-copybutton",
  "sphinx-autodoc-typehints",
]
test = [
  "pytest >=7.0",
  "pytest-subtests>=0.11",
  "h5py",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error:::risb",
]
log_cli_level = "info"
testpaths = [
  "tests",
]

[tool.mypy]
files = "src"
python_version = "3.10"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = [ "numpy.*", "scipy.*", "triqs.*", "nox.*"]
ignore_missing_imports = true
